// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalAnt should render a modal dialog by default 1`] = `
<Modal
  cancelText="Action"
  confirmLoading={false}
  maskTransitionName="fade"
  okText="Cancel"
  okType="primary"
  onCancel={[Function]}
  onOk={[Function]}
  title=""
  transitionName="zoom"
  visible={false}
  width="900px"
/>
`;

exports[`ModalAnt should support a custom footer 1`] = `
<Modal
  confirmLoading={false}
  footer={
    <div>
      Hello World
    </div>
  }
  maskTransitionName="fade"
  okType="primary"
  onCancel={[Function]}
  title=""
  transitionName="zoom"
  visible={false}
  width="900px"
/>
`;
